# cpptuto

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
scripts/multipass/: create-vm.bat  destroy-vm.bat  provision-software.sh
scripts/shell/: build-project.bat  build-project.sh  build-thirdparties.bat  build-thirdparties.sh  configure-project.bat  test-project.bat
src/musify/account/: CMakeLists.txt
src/musify/admin/: CMakeLists.txt
src/musify/browse/: CMakeLists.txt  browse_main.cpp
src/musify/holdall/: CMakeLists.txt  database.cpp  database.hpp  database.impl.cpp  database.impl.hpp  database.txt  database.ut.cpp
src/musify/welcome/: CMakeLists.txt
src/quickcheat/: CMakeLists.txt  date_and_time.cpp  pointers_and_arrays.cpp
src/quickstart/: CMakeLists.txt
thirdparties/: CMakeLists.txt
